--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Demo My Profile</string>
     <string name="name">Name</string>
     <string name="gpa">GPA</string>
+    <string name="your_name">Your Name</string>
+    <string name="your_gpa">Your GPA</string>
 </resources>
